# ROBEXBrainExtraction

./: CMakeLists.txt  LICENSE_GPLv3  LICENSE_LGPLv3  LICENSE_ROBEX  LICENSE_Slicer  README.md
BrainExtractionTool/: BrainExtractionTool.cxx  BrainExtractionTool.cxx.autosave  BrainExtractionTool.xml  CMakeLists.txt  aux_methods.cxx  aux_methods.h  loadModel.cpp
ROBEXBrainExtraction/: CMakeLists.txt  ROBEXBrainExtraction.cxx  ROBEXBrainExtraction.py  ROBEXBrainExtraction.xml  loadModel.h
ROBEXBrainExtractionCore/: CMakeLists.txt  ROBEXBrainExtractionCore.cxx  ROBEXBrainExtractionCore.xml  aux_methods.cxx  aux_methods.h  loadModel.cpp  loadModel.h
